<resources>
    <string name="app_name">GrocerEZ</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_myplate">My Plate</string>
    <string name="title_shopping">Shop</string>
    <string name="title_recipes">Recipes</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="button_edit_item">Edit</string>
    <string name="button_add_item">Add Item</string>
    <string name="button_add_category">Add Category</string>
    <string name="button_clear_list">Clear List</string>


    <!-- String related to Start Progress-->
    <string name="start_progress">Start Progress</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_8942">⋮</string>
    <string name="button_scan_barcode">Scan Barcode</string>
    <string name="recipe_parsing">Recipe Parsing</string>
    <string name="back_button">back button</string>
    <!-- String related to mY pLATE pROFILE-->
    <string name="sex_prompt">Sex</string>
    <string name="save_button_text">Save</string>
    <string name="edit">Edit</string>
    <string name="physical_activity">Physical Activity</string>
    <string name="empty_text">-----------</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="sex">Sex</string>
    <string name="age">Age</string>
    <string name="years_old">years old</string>
    <string name="fruits_info">1 cup of fruits counts as\n\t* 1 cup raw or cooked fruit; or\n\t* ½ cup dried fruit; or\n\t* 1 cup 100% fruit juice</string>
    <string name="vegetables_info">1 cup of vegetables coutns as\n\t* 1 cup raw or cooked vegetables; or\n\t* 2 cups leafy salad greens; or\n\t* 1 cup 100% vegetable juice.</string>
    <string name="grains_info">1 ounce of grains counts as\n\t* 1 slice bread; or\n\t* 1 ounce ready-to-eat cereal; or\n\t* ½ cup cooked rice, pasta, or cereal.</string>
    <string name="protein_info">1 ounce of protein foods counts as\n\t* 1 ounce seafood, lean meats, or poultry; or\n\t* 1 egg; or\n\t* 1 Tbsp peanut butter; or\n\t* ¼ cup cooked beans, peas, or lentils; or\n\t* ½ ounce unsalted nuts or seeds.</string>
    <string name="dairy_info">1 cup dairy counts as\n\t* 1 cup dairy milk or yogurt; or\n\t* 1 cup lactose-free dairy milk or yogurt; or\n\t* 1 ½ ounces hard cheese.</string>
    <string name="limit_info">\nLimit:\n* Added sugars to less than 75 grams a day.\n* Saturated fat to less than 33 grams a day.\n* Sodium to less than 2,300 miligrams a day.</string>
    <string name="limit">Choose foods and beverages with less added sugars, saturated fat, and sodium.</string>
    <string name="cal_sub_info">*This calorie pattern is only an estimate of your needs. Monitor your body weight and adjust your calories if needed.</string>
    <string name="goal">Goal</string>
    <string name="about_us">GrocerEZ is a mobile application designed to streamline food inventory management for users. It addresses the common challenges of monitoring food freshness, tracking expiration dates, and efficiently creating shopping lists. Beyond basic inventory management, GrocerEZ offers advanced features such as both user and web recipe integration as well as nutritional guidance with an easy-to-read MyPlate to help fit the specific needs of any user.</string>
    <string name="about_us2">At GrocerEZ, we believe that managing your food inventory should be as delightful as a stroll through a farmer\'s market on a sunny day. Our mission is to sprinkle a touch of magic into your kitchen, transforming mundane grocery tasks into culinary adventures. With GrocerEZ, you\'ll embark on a whimsical journey through the aisles of efficiency, guided by our trusty companion, the Recipe Wizard. Let us whisk you away to a world where pantry organization is an art form, and shopping lists are love letters to your taste buds. Join us in celebrating the joy of cooking, one enchanted ingredient at a time!</string>

    <string-array name="myplate_descriptions">
        <item>1 cup of fruits counts as\n\t* 1 cup raw or cooked fruit; or\n\t* ½ cup dried fruit; or\n\t* 1 cup 100% fruit juice</item>
        <item>1 cup of vegetables coutns as\n\t* 1 cup raw or cooked vegetables; or\n\t* 2 cups leafy salad greens; or\n\t* 1 cup 100% vegetable juice</item>
        <item>1 ounce of grains counts as\n\t* 1 slice bread; or\n\t* 1 ounce ready-to-eat cereal; or\n\t* ½ cup cooked rice, pasta, or cereal</item>
        <item>1 ounce of protein foods counts as\n\t* 1 ounce seafood, lean meats, or poultry; or\n\t* 1 egg; or\n\t* 1 Tbsp peanut butter; or\n\t* ¼ cup cooked beans, peas, or lentils; or\n\t* ½ ounce unsalted nuts or seeds</item>
        <item>1 cup dairy counts as\n\t* 1 cup dairy milk or yogurt; or\n\t* 1 cup lactose-free dairy milk or yogurt; or\n\t* 1 ½ ounces hard cheese</item>
    </string-array>

</resources>