<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#86aec6"
    tools:context=".ui.myplate.MyPlateSettingsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/back_btn"
            android:padding="14dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="My Plate Preferences"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:src="@drawable/myplate_logo"/>

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="center"-->
<!--                android:layout_marginTop="10dp"-->
<!--                android:text="Jane Doe"-->
<!--                android:textSize = "22sp"-->
<!--                android:textStyle="bold"/>-->

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/edit_button"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:paddingStart="30dp"
                android:layout_gravity="center"
                android:background="@drawable/round_back_secindary_100"
                android:text="Edit"
                android:textAllCaps="false"
                android:paddingEnd="30dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                android:background="#ff7171"
                android:orientation="horizontal"
                android:padding="15dp">
                <TextView
                    android:layout_marginStart="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/age"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ageText"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:imeOptions="actionDone"
                    android:inputType="number" />
                <TextView
                    android:layout_marginStart="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/years_old"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="#9cca93"
                android:orientation="horizontal"
                android:padding="15dp">

                <TextView
                    android:layout_marginStart="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sex"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
                <Spinner
                    android:id="@+id/sexSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="0dp"
                    android:prompt="@string/prompt_email"
                    android:entries="@array/gender_options"/>

            </LinearLayout>
<!--            WEIGHT LAYOUT-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="#ffb871"
                android:orientation="horizontal"
                android:padding="15dp">
                <TextView
                    android:layout_marginStart="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weight"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/weightText"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:imeOptions="actionDone"
                    android:inputType="number"/>
                <Spinner
                    android:id="@+id/weightSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="0dp"
                    android:prompt="@string/prompt_email"
                    android:entries="@array/weight_options"/>

            </LinearLayout>
<!--            HEIGHT LAYOUT-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="#c4acc9"
                android:orientation="horizontal"
                android:padding="15dp">
                <TextView
                    android:layout_marginStart="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/height"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/heightText"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:imeOptions="actionDone"
                    android:inputType="number"/>
                <Spinner
                    android:id="@+id/heightSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="0dp"
                    android:prompt="@string/prompt_email"
                    android:entries="@array/height_options"/>
            </LinearLayout>
<!--            PHYSICAL ACTIVITY-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="40dp"
                android:background="#c8dae9"
                android:orientation="horizontal"
                android:padding="15dp">
                <TextView
                    android:layout_marginStart="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/physical_activity"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
                <Spinner
                    android:id="@+id/physActSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="0dp"
                    android:prompt="@string/prompt_email"
                    android:entries="@array/physAct_options"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>